# raspi_scrap

./: PingProtocol.hh  pi0_buildroot_config
piCameraTesting/: README.txt
piCameraTesting/cpp/raspicam-0.1.6/src/: .raspicam.h.swp
piCameraTesting/cpp/simpletest_raspicam/: CMakeLists.txt  centroid_stream.cpp  simpletest_raspicam_cv.cpp
piCameraTesting/python/: calCollect.py  camcontrol.py  centroidStream.py  find_cam_params.py  hsv_testing.py  opencv_video_stream.py  video_stream.py
